# tinv

./: .gitignore  GUIDE.md  README.md
.github/workflows/: ci.yml
ccli/: Cargo.toml  README.md
ccli/src/: encoder.rs  ffmpeg.rs  lib.rs  main.rs  pipeline.rs  preset.rs  scheduler.rs  worker_client.rs
cli/: Cargo.toml  README.md  brew.md  ccli-dist-interop.test.js  ccli-interop.test.js  convert.js  dist-interop.test.js  ffmpeg.js  ffmpeg.test.js  interop.test.js  pipeline.js  pool.js  pool.test.js  test-support.mjs
cli-old/: README.md  ffmpeg.js  ffmpeg.test.js  pipeline.js  pipeline.test.js  pool.js  tinv-format.js
cli/ffmpeg/: .gitignore  README.md
cli/src/: ffmpeg.rs  lib.rs  main.rs  mp4.rs  pipeline.rs  pool.rs  preset.rs  tinv.rs  worker.rs
docs/superpowers/plans/: 2026-06-28-tinv-local-parallel-encoder.md  2026-06-29-ccli-distributed-encoding.md  2026-06-29-distributed-encoding.md
docs/superpowers/specs/: 2026-06-28-tinv-local-parallel-encoder-design.md  2026-06-29-distributed-segment-encoding-design.md
extension/: background.js  player.js
player-extension/: STORE_LISTING.md  manifest.json  player.css  player.html
player-web/: PRODUCT.md  about.html  compat.js  embed.html  index.html  manifest.json  vercel.json
web/: about.html  app.js  convert.js  index.html  player-core.js  privacy.html  robots.txt  sitemap.xml  style.css  sw.js  tinv-format.js
