[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "tinv local converter — native Rust orchestrator (wire-compatible TINV3)"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "tinv"
path = "src/main.rs"

[[bin]]
name = "tinv-worker"
path = "src/bin/tinv-worker.rs"

[dependencies]
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
ureq = "2"
tiny_http = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
